parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> axioma
Rule 1     empty -> <empty>
Rule 2     axioma -> programa
Rule 3     axioma -> empty
Rule 4     programa -> bloque_programa
Rule 5     bloque_programa -> sentencia
Rule 6     bloque_programa -> sentencia bloque_programa
Rule 7     sentencia -> declaracion SEMICOLON
Rule 8     sentencia -> asignacion SEMICOLON
Rule 9     sentencia -> condicion
Rule 10    sentencia -> bucle
Rule 11    sentencia -> funcion
Rule 12    sentencia -> declaracion_objeto SEMICOLON
Rule 13    sentencia -> asignacion_objeto SEMICOLON
Rule 14    sentencia -> function_call SEMICOLON
Rule 15    expresion -> binaria
Rule 16    expresion -> unaria
Rule 17    expresion -> PARENTHESISOPEN expresion PARENTHESISCLOSE
Rule 18    binaria -> expresion PLUS expresion
Rule 19    binaria -> expresion MINUS expresion
Rule 20    binaria -> expresion TIMES expresion
Rule 21    binaria -> expresion DIV expresion
Rule 22    binaria -> expresion LT expresion
Rule 23    binaria -> expresion GT expresion
Rule 24    binaria -> expresion LE expresion
Rule 25    binaria -> expresion GE expresion
Rule 26    binaria -> expresion EQ expresion
Rule 27    binaria -> expresion CONJUNCTION expresion
Rule 28    binaria -> expresion DISJUNCTION expresion
Rule 29    unaria -> PLUS expresion
Rule 30    unaria -> MINUS expresion
Rule 31    unaria -> NEG expresion
Rule 32    expresion -> ID
Rule 33    expresion -> ENTERO
Rule 34    expresion -> BIN
Rule 35    expresion -> OCT
Rule 36    expresion -> HEX
Rule 37    expresion -> REAL
Rule 38    expresion -> NCIENT
Rule 39    expresion -> CHAR
Rule 40    expresion -> TR
Rule 41    expresion -> FL
Rule 42    expresion -> NULL
Rule 43    expresion -> function_call
Rule 44    expresion -> acceso_propiedad
Rule 45    expresion -> objeto_asg
Rule 46    acceso_propiedad -> ID DOT ID acceso_propiedad_rec
Rule 47    acceso_propiedad -> ID BRACKETOPEN STRING BRACKETCLOSE acceso_propiedad_rec
Rule 48    acceso_propiedad_rec -> <empty>
Rule 49    acceso_propiedad_rec -> DOT ID acceso_propiedad_rec
Rule 50    acceso_propiedad_rec -> BRACKETOPEN STRING BRACKETCLOSE acceso_propiedad_rec
Rule 51    declaracion -> LET lista_id
Rule 52    declaracion -> LET lista_id EQUAL expresion
Rule 53    lista_id -> ID
Rule 54    lista_id -> ID COMA lista_id
Rule 55    asignacion -> lista_id EQUAL expresion
Rule 56    condicion -> IF PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves otra_condicion
Rule 57    otra_condicion -> <empty>
Rule 58    otra_condicion -> ELSE bloque_llaves
Rule 59    bloque_llaves -> LLAVEA bloque_programa LLAVEC
Rule 60    bucle -> WHILE PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves
Rule 61    tipo -> INT
Rule 62    tipo -> FLOAT
Rule 63    tipo -> CHARACTER
Rule 64    tipo -> BOOLEAN
Rule 65    tipo -> ID
Rule 66    funcion -> FUNCTION ID PARENTHESISOPEN lista_arg PARENTHESISCLOSE COLON tipo LLAVEA axioma RETURN expresion SEMICOLON LLAVEC
Rule 67    lista_arg -> <empty>
Rule 68    lista_arg -> lista_arg_rec
Rule 69    lista_arg_rec -> ID COLON tipo
Rule 70    lista_arg_rec -> ID COLON tipo COMA lista_arg_rec
Rule 71    function_call -> ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
Rule 72    lista_param -> <empty>
Rule 73    lista_param -> lista_param_rec
Rule 74    lista_param_rec -> expresion COMA lista_param_rec
Rule 75    lista_param_rec -> expresion
Rule 76    declaracion_objeto -> TYPE ID EQUAL objeto_dec
Rule 77    objeto_dec -> LLAVEA propiedades_dec LLAVEC
Rule 78    propiedades_dec -> <empty>
Rule 79    propiedades_dec -> propiedad_dec
Rule 80    propiedades_dec -> propiedad_dec COMA propiedades_dec
Rule 81    propiedad_dec -> ID COLON tipo
Rule 82    propiedad_dec -> STRING COLON tipo
Rule 83    propiedad_dec -> ID COLON objeto_dec
Rule 84    propiedad_dec -> STRING COLON objeto_dec
Rule 85    asignacion_objeto -> LET ID COLON ID EQUAL objeto_asg
Rule 86    objeto_asg -> LLAVEA propiedades_asg LLAVEC
Rule 87    propiedades_asg -> <empty>
Rule 88    propiedades_asg -> propiedad_asg
Rule 89    propiedades_asg -> propiedad_asg COMA propiedades_asg
Rule 90    propiedad_asg -> ID COLON expresion
Rule 91    propiedad_asg -> STRING COLON expresion

Terminals, with rules where they appear

BIN                  : 34
BOOLEAN              : 64
BRACKETCLOSE         : 47 50
BRACKETOPEN          : 47 50
CHAR                 : 39
CHARACTER            : 63
COLON                : 66 69 70 81 82 83 84 85 90 91
COMA                 : 54 70 74 80 89
CONJUNCTION          : 27
DISJUNCTION          : 28
DIV                  : 21
DOT                  : 46 49
ELSE                 : 58
ENTERO               : 33
EQ                   : 26
EQUAL                : 52 55 76 85
FL                   : 41
FLOAT                : 62
FUNCTION             : 66
GE                   : 25
GT                   : 23
HEX                  : 36
ID                   : 32 46 46 47 49 53 54 65 66 69 70 71 76 81 83 85 85 90
IF                   : 56
INT                  : 61
LE                   : 24
LET                  : 51 52 85
LLAVEA               : 59 66 77 86
LLAVEC               : 59 66 77 86
LT                   : 22
MINUS                : 19 30
NCIENT               : 38
NEG                  : 31
NULL                 : 42
OCT                  : 35
PARENTHESISCLOSE     : 17 56 60 66 71
PARENTHESISOPEN      : 17 56 60 66 71
PLUS                 : 18 29
REAL                 : 37
RETURN               : 66
SEMICOLON            : 7 8 12 13 14 66
STRING               : 47 50 82 84 91
TIMES                : 20
TR                   : 40
TYPE                 : 76
WHILE                : 60
error                : 

Nonterminals, with rules where they appear

acceso_propiedad     : 44
acceso_propiedad_rec : 46 47 49 50
asignacion           : 8
asignacion_objeto    : 13
axioma               : 66 0
binaria              : 15
bloque_llaves        : 56 58 60
bloque_programa      : 4 6 59
bucle                : 10
condicion            : 9
declaracion          : 7
declaracion_objeto   : 12
empty                : 3
expresion            : 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 31 52 55 56 60 66 74 75 90 91
funcion              : 11
function_call        : 14 43
lista_arg            : 66
lista_arg_rec        : 68 70
lista_id             : 51 52 54 55
lista_param          : 71
lista_param_rec      : 73 74
objeto_asg           : 45 85
objeto_dec           : 76 83 84
otra_condicion       : 56
programa             : 2
propiedad_asg        : 88 89
propiedad_dec        : 79 80
propiedades_asg      : 86 89
propiedades_dec      : 77 80
sentencia            : 5 6
tipo                 : 66 69 70 81 82
unaria               : 16

Parsing method: LALR

state 0

    (0) S' -> . axioma
    (2) axioma -> . programa
    (3) axioma -> . empty
    (4) programa -> . bloque_programa
    (1) empty -> .
    (5) bloque_programa -> . sentencia
    (6) bloque_programa -> . sentencia bloque_programa
    (7) sentencia -> . declaracion SEMICOLON
    (8) sentencia -> . asignacion SEMICOLON
    (9) sentencia -> . condicion
    (10) sentencia -> . bucle
    (11) sentencia -> . funcion
    (12) sentencia -> . declaracion_objeto SEMICOLON
    (13) sentencia -> . asignacion_objeto SEMICOLON
    (14) sentencia -> . function_call SEMICOLON
    (51) declaracion -> . LET lista_id
    (52) declaracion -> . LET lista_id EQUAL expresion
    (55) asignacion -> . lista_id EQUAL expresion
    (56) condicion -> . IF PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves otra_condicion
    (60) bucle -> . WHILE PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves
    (66) funcion -> . FUNCTION ID PARENTHESISOPEN lista_arg PARENTHESISCLOSE COLON tipo LLAVEA axioma RETURN expresion SEMICOLON LLAVEC
    (76) declaracion_objeto -> . TYPE ID EQUAL objeto_dec
    (85) asignacion_objeto -> . LET ID COLON ID EQUAL objeto_asg
    (71) function_call -> . ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (53) lista_id -> . ID
    (54) lista_id -> . ID COMA lista_id

    $end            reduce using rule 1 (empty -> .)
    LET             shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    TYPE            shift and go to state 20
    ID              shift and go to state 19

    axioma                         shift and go to state 1
    programa                       shift and go to state 2
    empty                          shift and go to state 3
    bloque_programa                shift and go to state 4
    sentencia                      shift and go to state 5
    declaracion                    shift and go to state 6
    asignacion                     shift and go to state 7
    condicion                      shift and go to state 8
    bucle                          shift and go to state 9
    funcion                        shift and go to state 10
    declaracion_objeto             shift and go to state 11
    asignacion_objeto              shift and go to state 12
    function_call                  shift and go to state 13
    lista_id                       shift and go to state 15

state 1

    (0) S' -> axioma .



state 2

    (2) axioma -> programa .

    $end            reduce using rule 2 (axioma -> programa .)
    RETURN          reduce using rule 2 (axioma -> programa .)


state 3

    (3) axioma -> empty .

    $end            reduce using rule 3 (axioma -> empty .)
    RETURN          reduce using rule 3 (axioma -> empty .)


state 4

    (4) programa -> bloque_programa .

    $end            reduce using rule 4 (programa -> bloque_programa .)
    RETURN          reduce using rule 4 (programa -> bloque_programa .)


state 5

    (5) bloque_programa -> sentencia .
    (6) bloque_programa -> sentencia . bloque_programa
    (5) bloque_programa -> . sentencia
    (6) bloque_programa -> . sentencia bloque_programa
    (7) sentencia -> . declaracion SEMICOLON
    (8) sentencia -> . asignacion SEMICOLON
    (9) sentencia -> . condicion
    (10) sentencia -> . bucle
    (11) sentencia -> . funcion
    (12) sentencia -> . declaracion_objeto SEMICOLON
    (13) sentencia -> . asignacion_objeto SEMICOLON
    (14) sentencia -> . function_call SEMICOLON
    (51) declaracion -> . LET lista_id
    (52) declaracion -> . LET lista_id EQUAL expresion
    (55) asignacion -> . lista_id EQUAL expresion
    (56) condicion -> . IF PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves otra_condicion
    (60) bucle -> . WHILE PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves
    (66) funcion -> . FUNCTION ID PARENTHESISOPEN lista_arg PARENTHESISCLOSE COLON tipo LLAVEA axioma RETURN expresion SEMICOLON LLAVEC
    (76) declaracion_objeto -> . TYPE ID EQUAL objeto_dec
    (85) asignacion_objeto -> . LET ID COLON ID EQUAL objeto_asg
    (71) function_call -> . ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (53) lista_id -> . ID
    (54) lista_id -> . ID COMA lista_id

    $end            reduce using rule 5 (bloque_programa -> sentencia .)
    LLAVEC          reduce using rule 5 (bloque_programa -> sentencia .)
    RETURN          reduce using rule 5 (bloque_programa -> sentencia .)
    LET             shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    TYPE            shift and go to state 20
    ID              shift and go to state 19

    sentencia                      shift and go to state 5
    bloque_programa                shift and go to state 21
    declaracion                    shift and go to state 6
    asignacion                     shift and go to state 7
    condicion                      shift and go to state 8
    bucle                          shift and go to state 9
    funcion                        shift and go to state 10
    declaracion_objeto             shift and go to state 11
    asignacion_objeto              shift and go to state 12
    function_call                  shift and go to state 13
    lista_id                       shift and go to state 15

state 6

    (7) sentencia -> declaracion . SEMICOLON

    SEMICOLON       shift and go to state 22


state 7

    (8) sentencia -> asignacion . SEMICOLON

    SEMICOLON       shift and go to state 23


state 8

    (9) sentencia -> condicion .

    LET             reduce using rule 9 (sentencia -> condicion .)
    IF              reduce using rule 9 (sentencia -> condicion .)
    WHILE           reduce using rule 9 (sentencia -> condicion .)
    FUNCTION        reduce using rule 9 (sentencia -> condicion .)
    TYPE            reduce using rule 9 (sentencia -> condicion .)
    ID              reduce using rule 9 (sentencia -> condicion .)
    $end            reduce using rule 9 (sentencia -> condicion .)
    LLAVEC          reduce using rule 9 (sentencia -> condicion .)
    RETURN          reduce using rule 9 (sentencia -> condicion .)


state 9

    (10) sentencia -> bucle .

    LET             reduce using rule 10 (sentencia -> bucle .)
    IF              reduce using rule 10 (sentencia -> bucle .)
    WHILE           reduce using rule 10 (sentencia -> bucle .)
    FUNCTION        reduce using rule 10 (sentencia -> bucle .)
    TYPE            reduce using rule 10 (sentencia -> bucle .)
    ID              reduce using rule 10 (sentencia -> bucle .)
    $end            reduce using rule 10 (sentencia -> bucle .)
    LLAVEC          reduce using rule 10 (sentencia -> bucle .)
    RETURN          reduce using rule 10 (sentencia -> bucle .)


state 10

    (11) sentencia -> funcion .

    LET             reduce using rule 11 (sentencia -> funcion .)
    IF              reduce using rule 11 (sentencia -> funcion .)
    WHILE           reduce using rule 11 (sentencia -> funcion .)
    FUNCTION        reduce using rule 11 (sentencia -> funcion .)
    TYPE            reduce using rule 11 (sentencia -> funcion .)
    ID              reduce using rule 11 (sentencia -> funcion .)
    $end            reduce using rule 11 (sentencia -> funcion .)
    LLAVEC          reduce using rule 11 (sentencia -> funcion .)
    RETURN          reduce using rule 11 (sentencia -> funcion .)


state 11

    (12) sentencia -> declaracion_objeto . SEMICOLON

    SEMICOLON       shift and go to state 24


state 12

    (13) sentencia -> asignacion_objeto . SEMICOLON

    SEMICOLON       shift and go to state 25


state 13

    (14) sentencia -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 26


state 14

    (51) declaracion -> LET . lista_id
    (52) declaracion -> LET . lista_id EQUAL expresion
    (85) asignacion_objeto -> LET . ID COLON ID EQUAL objeto_asg
    (53) lista_id -> . ID
    (54) lista_id -> . ID COMA lista_id

    ID              shift and go to state 28

    lista_id                       shift and go to state 27

state 15

    (55) asignacion -> lista_id . EQUAL expresion

    EQUAL           shift and go to state 29


state 16

    (56) condicion -> IF . PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves otra_condicion

    PARENTHESISOPEN shift and go to state 30


state 17

    (60) bucle -> WHILE . PARENTHESISOPEN expresion PARENTHESISCLOSE bloque_llaves

    PARENTHESISOPEN shift and go to state 31


state 18

    (66) funcion -> FUNCTION . ID PARENTHESISOPEN lista_arg PARENTHESISCLOSE COLON tipo LLAVEA axioma RETURN expresion SEMICOLON LLAVEC

    ID              shift and go to state 32


state 19

    (71) function_call -> ID . PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (53) lista_id -> ID .
    (54) lista_id -> ID . COMA lista_id

    PARENTHESISOPEN shift and go to state 33
    EQUAL           reduce using rule 53 (lista_id -> ID .)
    COMA            shift and go to state 34


state 20

    (76) declaracion_objeto -> TYPE . ID EQUAL objeto_dec

    ID              shift and go to state 35


state 21

    (6) bloque_programa -> sentencia bloque_programa .

    $end            reduce using rule 6 (bloque_programa -> sentencia bloque_programa .)
    LLAVEC          reduce using rule 6 (bloque_programa -> sentencia bloque_programa .)
    RETURN          reduce using rule 6 (bloque_programa -> sentencia bloque_programa .)


state 22

    (7) sentencia -> declaracion SEMICOLON .

    LET             reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    IF              reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    WHILE           reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    FUNCTION        reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    TYPE            reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    ID              reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    $end            reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    LLAVEC          reduce using rule 7 (sentencia -> declaracion SEMICOLON .)
    RETURN          reduce using rule 7 (sentencia -> declaracion SEMICOLON .)


state 23

    (8) sentencia -> asignacion SEMICOLON .

    LET             reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    IF              reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    WHILE           reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    FUNCTION        reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    TYPE            reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    ID              reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    $end            reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    LLAVEC          reduce using rule 8 (sentencia -> asignacion SEMICOLON .)
    RETURN          reduce using rule 8 (sentencia -> asignacion SEMICOLON .)


state 24

    (12) sentencia -> declaracion_objeto SEMICOLON .

    LET             reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    IF              reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    WHILE           reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    FUNCTION        reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    TYPE            reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    ID              reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    $end            reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    LLAVEC          reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)
    RETURN          reduce using rule 12 (sentencia -> declaracion_objeto SEMICOLON .)


state 25

    (13) sentencia -> asignacion_objeto SEMICOLON .

    LET             reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    IF              reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    WHILE           reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    FUNCTION        reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    TYPE            reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    ID              reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    $end            reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    LLAVEC          reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)
    RETURN          reduce using rule 13 (sentencia -> asignacion_objeto SEMICOLON .)


state 26

    (14) sentencia -> function_call SEMICOLON .

    LET             reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    IF              reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    WHILE           reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    FUNCTION        reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    TYPE            reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    ID              reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    $end            reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    LLAVEC          reduce using rule 14 (sentencia -> function_call SEMICOLON .)
    RETURN          reduce using rule 14 (sentencia -> function_call SEMICOLON .)


state 27

    (51) declaracion -> LET lista_id .
    (52) declaracion -> LET lista_id . EQUAL expresion

    SEMICOLON       reduce using rule 51 (declaracion -> LET lista_id .)
    EQUAL           shift and go to state 36


state 28

    (85) asignacion_objeto -> LET ID . COLON ID EQUAL objeto_asg
    (53) lista_id -> ID .
    (54) lista_id -> ID . COMA lista_id

    COLON           shift and go to state 37
    EQUAL           reduce using rule 53 (lista_id -> ID .)
    SEMICOLON       reduce using rule 53 (lista_id -> ID .)
    COMA            shift and go to state 34


state 29

    (55) asignacion -> lista_id EQUAL . expresion
    (15) expresion -> . binaria
    (16) expresion -> . unaria
    (17) expresion -> . PARENTHESISOPEN expresion PARENTHESISCLOSE
    (32) expresion -> . ID
    (33) expresion -> . ENTERO
    (34) expresion -> . BIN
    (35) expresion -> . OCT
    (36) expresion -> . HEX
    (37) expresion -> . REAL
    (38) expresion -> . NCIENT
    (39) expresion -> . CHAR
    (40) expresion -> . TR
    (41) expresion -> . FL
    (42) expresion -> . NULL
    (43) expresion -> . function_call
    (44) expresion -> . acceso_propiedad
    (45) expresion -> . objeto_asg
    (18) binaria -> . expresion PLUS expresion
    (19) binaria -> . expresion MINUS expresion
    (20) binaria -> . expresion TIMES expresion
    (21) binaria -> . expresion DIV expresion
    (22) binaria -> . expresion LT expresion
    (23) binaria -> . expresion GT expresion
    (24) binaria -> . expresion LE expresion
    (25) binaria -> . expresion GE expresion
    (26) binaria -> . expresion EQ expresion
    (27) binaria -> . expresion CONJUNCTION expresion
    (28) binaria -> . expresion DISJUNCTION expresion
    (29) unaria -> . PLUS expresion
    (30) unaria -> . MINUS expresion
    (31) unaria -> . NEG expresion
    (71) function_call -> . ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (46) acceso_propiedad -> . ID DOT ID acceso_propiedad_rec
    (47) acceso_propiedad -> . ID BRACKETOPEN STRING BRACKETCLOSE acceso_propiedad_rec
    (86) objeto_asg -> . LLAVEA propiedades_asg LLAVEC

    PARENTHESISOPEN shift and go to state 41
    ID              shift and go to state 42
    ENTERO          shift and go to state 43
    BIN             shift and go to state 44
    OCT             shift and go to state 45
    HEX             shift and go to state 46
    REAL            shift and go to state 47
    NCIENT          shift and go to state 48
    CHAR            shift and go to state 49
    TR              shift and go to state 50
    FL              shift and go to state 51
    NULL            shift and go to state 52
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    NEG             shift and go to state 58
    LLAVEA          shift and go to state 59

    expresion                      shift and go to state 38
    binaria                        shift and go to state 39
    unaria                         shift and go to state 40
    function_call                  shift and go to state 53
    acceso_propiedad               shift and go to state 54
    objeto_asg                     shift and go to state 55

state 30

    (56) condicion -> IF PARENTHESISOPEN . expresion PARENTHESISCLOSE bloque_llaves otra_condicion
    (15) expresion -> . binaria
    (16) expresion -> . unaria
    (17) expresion -> . PARENTHESISOPEN expresion PARENTHESISCLOSE
    (32) expresion -> . ID
    (33) expresion -> . ENTERO
    (34) expresion -> . BIN
    (35) expresion -> . OCT
    (36) expresion -> . HEX
    (37) expresion -> . REAL
    (38) expresion -> . NCIENT
    (39) expresion -> . CHAR
    (40) expresion -> . TR
    (41) expresion -> . FL
    (42) expresion -> . NULL
    (43) expresion -> . function_call
    (44) expresion -> . acceso_propiedad
    (45) expresion -> . objeto_asg
    (18) binaria -> . expresion PLUS expresion
    (19) binaria -> . expresion MINUS expresion
    (20) binaria -> . expresion TIMES expresion
    (21) binaria -> . expresion DIV expresion
    (22) binaria -> . expresion LT expresion
    (23) binaria -> . expresion GT expresion
    (24) binaria -> . expresion LE expresion
    (25) binaria -> . expresion GE expresion
    (26) binaria -> . expresion EQ expresion
    (27) binaria -> . expresion CONJUNCTION expresion
    (28) binaria -> . expresion DISJUNCTION expresion
    (29) unaria -> . PLUS expresion
    (30) unaria -> . MINUS expresion
    (31) unaria -> . NEG expresion
    (71) function_call -> . ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (46) acceso_propiedad -> . ID DOT ID acceso_propiedad_rec
    (47) acceso_propiedad -> . ID BRACKETOPEN STRING BRACKETCLOSE acceso_propiedad_rec
    (86) objeto_asg -> . LLAVEA propiedades_asg LLAVEC

    PARENTHESISOPEN shift and go to state 41
    ID              shift and go to state 42
    ENTERO          shift and go to state 43
    BIN             shift and go to state 44
    OCT             shift and go to state 45
    HEX             shift and go to state 46
    REAL            shift and go to state 47
    NCIENT          shift and go to state 48
    CHAR            shift and go to state 49
    TR              shift and go to state 50
    FL              shift and go to state 51
    NULL            shift and go to state 52
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    NEG             shift and go to state 58
    LLAVEA          shift and go to state 59

    expresion                      shift and go to state 60
    binaria                        shift and go to state 39
    unaria                         shift and go to state 40
    function_call                  shift and go to state 53
    acceso_propiedad               shift and go to state 54
    objeto_asg                     shift and go to state 55

state 31

    (60) bucle -> WHILE PARENTHESISOPEN . expresion PARENTHESISCLOSE bloque_llaves
    (15) expresion -> . binaria
    (16) expresion -> . unaria
    (17) expresion -> . PARENTHESISOPEN expresion PARENTHESISCLOSE
    (32) expresion -> . ID
    (33) expresion -> . ENTERO
    (34) expresion -> . BIN
    (35) expresion -> . OCT
    (36) expresion -> . HEX
    (37) expresion -> . REAL
    (38) expresion -> . NCIENT
    (39) expresion -> . CHAR
    (40) expresion -> . TR
    (41) expresion -> . FL
    (42) expresion -> . NULL
    (43) expresion -> . function_call
    (44) expresion -> . acceso_propiedad
    (45) expresion -> . objeto_asg
    (18) binaria -> . expresion PLUS expresion
    (19) binaria -> . expresion MINUS expresion
    (20) binaria -> . expresion TIMES expresion
    (21) binaria -> . expresion DIV expresion
    (22) binaria -> . expresion LT expresion
    (23) binaria -> . expresion GT expresion
    (24) binaria -> . expresion LE expresion
    (25) binaria -> . expresion GE expresion
    (26) binaria -> . expresion EQ expresion
    (27) binaria -> . expresion CONJUNCTION expresion
    (28) binaria -> . expresion DISJUNCTION expresion
    (29) unaria -> . PLUS expresion
    (30) unaria -> . MINUS expresion
    (31) unaria -> . NEG expresion
    (71) function_call -> . ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (46) acceso_propiedad -> . ID DOT ID acceso_propiedad_rec
    (47) acceso_propiedad -> . ID BRACKETOPEN STRING BRACKETCLOSE acceso_propiedad_rec
    (86) objeto_asg -> . LLAVEA propiedades_asg LLAVEC

    PARENTHESISOPEN shift and go to state 41
    ID              shift and go to state 42
    ENTERO          shift and go to state 43
    BIN             shift and go to state 44
    OCT             shift and go to state 45
    HEX             shift and go to state 46
    REAL            shift and go to state 47
    NCIENT          shift and go to state 48
    CHAR            shift and go to state 49
    TR              shift and go to state 50
    FL              shift and go to state 51
    NULL            shift and go to state 52
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    NEG             shift and go to state 58
    LLAVEA          shift and go to state 59

    expresion                      shift and go to state 61
    binaria                        shift and go to state 39
    unaria                         shift and go to state 40
    function_call                  shift and go to state 53
    acceso_propiedad               shift and go to state 54
    objeto_asg                     shift and go to state 55

state 32

    (66) funcion -> FUNCTION ID . PARENTHESISOPEN lista_arg PARENTHESISCLOSE COLON tipo LLAVEA axioma RETURN expresion SEMICOLON LLAVEC

    PARENTHESISOPEN shift and go to state 62


state 33

    (71) function_call -> ID PARENTHESISOPEN . lista_param PARENTHESISCLOSE
    (72) lista_param -> .
    (73) lista_param -> . lista_param_rec
    (74) lista_param_rec -> . expresion COMA lista_param_rec
    (75) lista_param_rec -> . expresion
    (15) expresion -> . binaria
    (16) expresion -> . unaria
    (17) expresion -> . PARENTHESISOPEN expresion PARENTHESISCLOSE
    (32) expresion -> . ID
    (33) expresion -> . ENTERO
    (34) expresion -> . BIN
    (35) expresion -> . OCT
    (36) expresion -> . HEX
    (37) expresion -> . REAL
    (38) expresion -> . NCIENT
    (39) expresion -> . CHAR
    (40) expresion -> . TR
    (41) expresion -> . FL
    (42) expresion -> . NULL
    (43) expresion -> . function_call
    (44) expresion -> . acceso_propiedad
    (45) expresion -> . objeto_asg
    (18) binaria -> . expresion PLUS expresion
    (19) binaria -> . expresion MINUS expresion
    (20) binaria -> . expresion TIMES expresion
    (21) binaria -> . expresion DIV expresion
    (22) binaria -> . expresion LT expresion
    (23) binaria -> . expresion GT expresion
    (24) binaria -> . expresion LE expresion
    (25) binaria -> . expresion GE expresion
    (26) binaria -> . expresion EQ expresion
    (27) binaria -> . expresion CONJUNCTION expresion
    (28) binaria -> . expresion DISJUNCTION expresion
    (29) unaria -> . PLUS expresion
    (30) unaria -> . MINUS expresion
    (31) unaria -> . NEG expresion
    (71) function_call -> . ID PARENTHESISOPEN lista_param PARENTHESISCLOSE
    (46) acceso_propiedad -> . ID DOT ID acceso_propiedad_rec
    (47) acceso_propiedad -> . ID BRACKETOPEN STRING BRACKETCLOSE acceso_propiedad_rec
    (86) objeto_asg -> . LLAVEA propiedades_asg LLAVEC

    PARENTHESISCLOSE reduce using rule 72 (lista_param -> .)
    PARENTHESISOPEN shift and go to state 41
    ID              shift and go to state 42
    ENTERO          shift and go to state 43
    BIN             shift and go to state 44
    OCT             shift and go to state 45
    HEX             shift and go to state 46
    REAL            shift and go to state 47
    NCIENT          shift and go to state 48
    CHAR            shift and go to state 49
    TR              shift and go to state 50
    FL              shift and go to state 51
    NULL            shift and go to state 52
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    NEG             shift and go to state 58
    LLAVEA          shift and go to state 59

    lista_param                    shift and go to state 63
    lista_param_rec                shift and go to state 64
    expresion                      shift and go to state 65
    binaria                        shift and go to state 39
    unaria                         shift and go to state 40
    function_call                  shift and go to state 53
    acceso_propiedad               shift and go to state 54
    objeto_asg                     shift and go to state 55

state 34

    (54) lista_id -> ID COMA . lista_id
    (53) lista_id -> . ID
    (54) lista_id -> . ID COMA lista_id

    ID              shift and go to state 66

    lista_id                       shift and go to state 67

state 35

    (76) declaracion_objeto -> TYPE ID . EQUAL objeto_dec

    EQUAL           shift and go to state 68


state 36
